@@ -11,7 +11,6 @@ require 'action_controller'
 
 require File.expand_path(File.join(File.dirname(__FILE__), '../lib/formtastic/util'))
 require File.expand_path(File.join(File.dirname(__FILE__), '../lib/formtastic'))
-require File.expand_path(File.join(File.dirname(__FILE__), '../lib/formtastic/helpers/layout_helper'))
 
 # Requires supporting files with custom matchers and macros, etc,
 # in ./support/ and its subdirectories in alphabetic order.
