@@ -7,6 +7,7 @@
 * Renamed Formtastic::SemanticFormBuilder to Formtastic::FormBuilder (SemanticFormBuilder still exists as a subclass, need to handle deprecation notices somehow)
 * Massive refactoring of formtastic.rb into around 30 files and modules like StringInput and ButtonsHelper
 * Removed chunks of Rails 2 specific code, tests and documentation
+* Removed formtastic_stylesheet_link_tag
 
 1.2.3
 
